Closed Bug 1464016 Opened 6 years ago Closed 6 years ago

control + option + a shouldn't input character on macOS

Categories

(Core :: Widget: Cocoa, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

Attachments

(1 file)

When I write automated test for bug 1458845, I realized that control + option + a causes printable keypress event even though TextInputHandler::InsertText() is called with a control character, U+0001.
Comment on attachment 8981343 [details]
Bug 1464016 - TextInputHandler should not clear alt/ctrl/meta modifiers of eKeyPress event before sending TextEventDispatcher

https://reviewboard.mozilla.org/r/246470/#review253850
Attachment #8981343 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/2415a1d53df3
TextInputHandler should not clear alt/ctrl/meta modifiers of eKeyPress event before sending TextEventDispatcher r=m_kato
https://hg.mozilla.org/mozilla-central/rev/2415a1d53df3
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Depends on: 1491032
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: